[gd_scene load_steps=5 format=2]

[ext_resource path="res://Modules/visibility_triggers/VisibilityStinger.gd" type="Script" id=1]
[ext_resource path="res://addons/subtitles/scenes/SubtitleData.gd" type="Script" id=2]
[ext_resource path="res://addons/subtitles/scripts/ASP_3D_Events.gd" type="Script" id=3]
[ext_resource path="res://Modules/godot_splash_screens/resources/audio/182348__claire-h__metal-scrape03_modified.ogg" type="AudioStream" id=4]

[node name="VisibilityStinger" type="VisibilityNotifier" groups=["persist"]]
aabb = AABB( -0.25, -0.25, -0.25, 0.5, 0.5, 0.5 )
script = ExtResource( 1 )
stinger_audio = ExtResource( 4 )

[node name="StingerAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
max_distance = 50.0
script = ExtResource( 3 )

[node name="SubtitleData" type="Node" parent="StingerAudio"]
script = ExtResource( 2 )
subtitle_key = "StingerAudio"

[node name="RayCast" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, 0 )

[connection signal="camera_entered" from="." to="." method="_on_VisibilityStinger_camera_entered"]
[connection signal="camera_exited" from="." to="." method="_on_VisibilityStinger_camera_exited"]
